feat: Implement multi-language support for generated Java files (#8)
* feat: Implement multi-language support for generated Java files

This commit introduces internationalization (i18n) support for the properties mapped to Java constants. Instead of generating simple String constants, the plugin now generates Java classes where each property key is associated with a `java.util.Map<String, String>`. This map stores translations of the property value, keyed by language codes.

Key Changes:

1.  **Property File Convention:**
    -   The plugin now expects language-specific property files named with a `basename_language.properties` pattern (e.g., `messages_en.properties`, `messages_de.properties`, `labels_fr-CA.properties`).
    -   `PropertiesGeneratorMojo` has been updated to scan for these files, group them by their `basename`, and load all translations for each property key.

2.  **Generated Java Structure:**
    -   `PropertiesClassGenerator` and `ClassBuilder` were modified to generate a `public static final java.util.Map<String, String>` for each property key.
    -   The map is populated in a static initializer block, with language codes as keys (e.g., "en", "de") and translated strings as values.
    -   Example: `public static final Map<String, String> GREETING; static { GREETING = new HashMap<>(); GREETING.put("en", "Hello"); GREETING.put("de", "Hallo"); }`

3.  **Unit Tests:**
    -   I added comprehensive unit tests for `PropertiesClassGenerator` and `ClassBuilder` to verify the correct generation of localized map constants.
    -   These cover various scenarios, including multiple languages, missing translations for a specific language, special characters in values, and complex language codes.

4.  **Documentation:**
    -   Updated `README.md` extensively to document the new feature. This includes:
        -   The required property file naming convention.
        -   The structure of the generated Java classes and how to use the localized maps.
        -